# backend/src/swagger.yaml
@@ -511,6 +511,8 @@ tags:
     description: Routes managing book reviews
   - name: Books
     description: Routes managing books
+  - name: Booklist
+    description: Routes managing users' booklists
 
 paths:
   /api/login:
@@ -582,6 +584,79 @@ paths:
       security:
         - ApiKeyAuth: []
 
+  /api/users/{id}/booklist:
+    get:
+      summary: Get booklist of a user
+      tags:
+        - Booklist
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: The user's booklist
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  properties:
+                    book:
+                      type: object
+                      example:
+                        _id: _id
+                        title: Title
+                        author: Author
+                        imageUrl: Image Url
+                    read_status:
+                      type: string
+                      example: to_read
+        400:
+          description: Bad requests
+    post:
+      summary: Get booklist of a user
+      tags:
+        - Booklist
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                akarmennyi_book_id:
+                  type: string
+                  example: akarmennyi read status
+      responses:
+        200:
+          description: The user's booklist
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  properties:
+                    book:
+                      type: object
+                      example:
+                        _id: _id
+                        title: Title
+                        author: Author
+                        imageUrl: Image Url
+                    read_status:
+                      type: string
+                      example: to_read
+        400:
+          description: Bad requests
 
   /api/users:
     get:
